--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -6,11 +6,10 @@
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="assets/layout/styles/theme/lara-light-indigo/theme.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link id="theme-css" rel="stylesheet" type="text/css" href="assets/layout/styles/theme/lara-light-indigo/theme.css">
   </head>
-  <body class="bg-light">
-    <app-root>
-      <div class="donut centered"></div>
-    </app-root>
+  <body>
+    <app-root></app-root>
   </body>
 </html>
